--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -337,7 +337,7 @@ nav ul li a {
         background: #76232f;
         height: 500px;
         width: 500px;
-        
+        margin-right: 200px;
         padding: 4px ;
         opacity: .8;
        float: center;
@@ -380,6 +380,7 @@ nav ul li a {
         height: 390px;
         width: 390px;
         padding: 4px ;
+       
         opacity: .8;
        float: center;
     
@@ -443,6 +444,7 @@ nav ul li a {
     background: #76232f;
     height: 300px;
     width: 300px;
+    margin-left: 200px;
     padding: 4px ;
     opacity: .8;
    float: center;
@@ -455,6 +457,7 @@ nav ul li a {
     padding: 10px;
     width: 300px;
     margin: 10px;
+    margin-left: 190px;
 
     
     float: inline-start;
@@ -519,6 +522,7 @@ nav ul li a {
         height: 300px;
         width: 300px;
         padding: 4px ;
+        margin:30px;
         opacity: .8;
        float: center;
     
