added link to rpg game in portfolio section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -307,7 +307,7 @@ nav ul li a {
     list-style:none;
     padding-bottom: 6px;
     border-bottom:dotted 1 px #333;
-    list-style-image: url('../images/check.png');
+    list-style-image: url('../images/blueMnt.jpg');
 }
 .my-fom{
     padding:20px;
