--- a/fighterRPG/assets2/css2/style2.css
+++ b/fighterRPG/assets2/css2/style2.css
@@ -55,6 +55,7 @@
     width:100px;
     font-size: 2em;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    margin-top: 75%;
 }
 #fight:active {
     background-color: #3e8e41;
@@ -173,6 +174,8 @@ opacity: .6;
 #hero-area{
     height: 150px;
     width: 200px;
+    margin-bottom: 50%;
+    
 }
 #enemy-area{
     height: 150px;
