--- a/public/css/index.css
+++ b/public/css/index.css
@@ -24,6 +24,14 @@ h1{
     font-size:2em;margin:0.67em 0;
 	
 }
+/* .about-me{
+    /* background-color:lightgrey; */
+    
+    /* opacity:40%; */
+/* }  */
+/* .about-me:before{
+
+} */
 /* h2{
 	border-bottom:solid, black;
 } */
