--- a/public/css/base.css
+++ b/public/css/base.css
@@ -69,7 +69,7 @@
 }
 
 .codrops-header {
-	flex-direction: column;
+	/* flex-direction: column; */
 	align-items: center;
 }
 
@@ -149,7 +149,7 @@
 
 .github {
 	display: block;
-	padding-left: 20px;
+	
 }
 
 .github1 {
@@ -168,6 +168,61 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+}
+@media only screen and (min-width : 760px){
+	.about-me{
+		color:white;
+		background: darkslategray;
+		
+		border: 1px solid;
+		padding: 10px;
+		box-shadow: 5px 10px 18px #888888;
+		padding:5px;
+		font-family: Georgia, 'Times New Roman', Times, serif;
+		text-align: center;
+	}
+}
+@media only screen and  (max-width : 604px) {
+.about-me{
+	color:white;
+	background: darkslategray;
+	
+	border: 1px solid;
+	padding: 10px;
+	box-shadow: 5px 10px 18px #888888;
+	padding:5px;
+	font-family: Georgia, 'Times New Roman', Times, serif;
+	text-align: center;
+}
+.content--fixed{
+	height: 100px;
+	font-size: 12px;
+	
+    justify-content: left;
+    text-align: left;
+    background-color: aqua;
+}
+.skills{
+	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+	list-style: none;
+}
+.github{
+	/* float:left; */
+	margin-right:30px;
+	color:black;
+}
+.demo--current{
+	color:#c06e84;
+
+}
+	h2, h1{
+		position: relative;
+		color:#c06e84;
+		font-size:1em!important;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
 }
 
 .content--switch {
