--- a/public/css/base.css
+++ b/public/css/base.css
@@ -191,8 +191,44 @@
 		font-family: Georgia, 'Times New Roman', Times, serif;
 		text-align: center;
 	}
+	
+}
+@media only screen and (max-width : 730px){
+	#content-1{
+		height:575px!important;
+	}
+}
+@media only screen and (max-height : 700px){
+	#content-6{
+		height:50%;
+
+		width:100%;
+	}
+	a.column{
+		font-size:12px;
+		width:15%;
+		height:20px;
+			}
+}
+@media only screen and (min-width : 568px){
+	#content-1{
+		height:395px!important;
+	}
+	.email1{
+		margin-bottom:70px;
+	}
 }
 @media only screen and  (max-width : 604px) {
+	#content-1{
+		height:495px;
+	}
+	.column{
+font-size:12px;
+width:15%;
+	}
+	.projectRow{
+		height:50px;
+	}
 .about-me{
 	color:white;
 	background: darkslategray;
