--- a/public/css/grid.css
+++ b/public/css/grid.css
@@ -197,8 +197,8 @@
 	  text-align: center;
 	float: left;
 	width: 30%;
-	margin:10px;
-	padding: 10px;
+	/* margin:10px;
+	padding: 10px; */
 	height: 300px; /* Should be removed. Only for demonstration */
   }
   
