--- a/public/css/base.css
+++ b/public/css/base.css
@@ -149,7 +149,7 @@
 
 .github {
 	display: block;
-	
+	margin-left: 40px;
 }
 .skills{
 	list-style-type: none;
@@ -181,15 +181,17 @@
 }
 @media only screen and (min-width : 760px){
 	.about-me{
-		color:white;
-		background: darkslategray;
-		
+		color:black;
+		background: white;
 		border: 1px solid;
 		padding: 10px;
 		box-shadow: 5px 10px 18px #888888;
 		padding:5px;
 		font-family: Georgia, 'Times New Roman', Times, serif;
 		text-align: center;
+	}
+	#RJ{
+		font-size:3em!important;
 	}
 	
 }
@@ -222,6 +224,10 @@
 	#content-1{
 		height:495px;
 	}
+
+	#aboutMe1{
+		font-size:4em!important;
+	}
 	.column{
 font-size:12px;
 width:15%;
@@ -230,8 +236,8 @@ width:15%;
 		height:50px;
 	}
 .about-me{
-	color:white;
-	background: darkslategray;
+	color:black;
+	background: white;
 	
 	border: 1px solid;
 	padding: 10px;
