--- a/public/css/index.css
+++ b/public/css/index.css
@@ -80,8 +80,10 @@ sub{
 }
 img{
     border:0;
-    margin-left:25px;
+    /* margin-left:25px; */
     border:solid 1px black;
+    height: inherit;
+    width:inherit;
 }
 svg:not(:root){
     overflow:hidden;
@@ -256,6 +258,21 @@ li:hover {
     text-align: center;
     font-size:1.4em;
 }
+.box{
+    height:200px;
+    /* width:175px; */
+}
+@media screen and (max-width:850px) {
+    .column{
+      width:100%; /* The width is 100%, when the viewport is 800px or smaller */
+    }
+    .projectRow{
+        width:100%;
+        height:100%;
+    }
+    #PM{
+        width:300px!important;
+    }
 /* .row {
 	width: 100%;
 	clear: both; Clear creates new styles for the next row 
