--- a/public/css/grid.css
+++ b/public/css/grid.css
@@ -195,11 +195,11 @@
   /* Create three equal columns that floats next to each other */
   .column {
 	  text-align: center;
-	float: left;
-	width: 30%;
+	/* float: left;
+	width: 52%; */
 	/* margin:10px;
 	padding: 10px; */
-	height: 300px; /* Should be removed. Only for demonstration */
+	/* height: 300px; Should be removed. Only for demonstration */
   }
   
   /* Clear floats after the columns */
