--- a/public/css/index.css
+++ b/public/css/index.css
@@ -83,7 +83,7 @@ img{
     /* margin-left:25px; */
     border:solid 1px black;
     height: inherit;
-    width:inherit;
+    width:250px;
 }
 svg:not(:root){
     overflow:hidden;
@@ -259,8 +259,9 @@ li:hover {
     font-size:1.4em;
 }
 .box{
-    height:200px;
-    /* width:175px; */
+    height: 200px;
+    /* width: 350px; */
+    /* float: right; */
 }
 @media screen and (max-width:850px) {
     .column{
@@ -271,7 +272,7 @@ li:hover {
         height:100%;
     }
     #PM{
-        width:300px!important;
+        /* width:300px!important; */
     }
 /* .row {
 	width: 100%;
