--- a/public/css/grid.css
+++ b/public/css/grid.css
@@ -195,6 +195,8 @@
   /* Create three equal columns that floats next to each other */
   .column {
 	  text-align: center;
+	  width: 30%;
+	  float: left;
 	/* float: left;
 	width: 52%; */
 	/* margin:10px;
