--- a/public/css/demo2.css
+++ b/public/css/demo2.css
@@ -54,7 +54,7 @@
 	width: 100%;
 	height: 20%;
 	bottom: 0;
-	background: linear-gradient(transparent, #000);
+	/* background: linear-gradient(transparent, #000); */
 }
 
 #content-1 {
