--- a/public/css/index.css
+++ b/public/css/index.css
@@ -82,8 +82,55 @@ img{
     border:0;
     /* margin-left:25px; */
     border:solid 1px black;
-    height: inherit;
+    height: 200px;
     width:250px;
+    padding:5px;
+}
+
+.container {
+    /* position: relative;
+    width: 50%; */
+  }
+  
+  .image {
+    /* display: block;
+    width: 100%;
+    height: auto; */
+  }
+  
+  .overlay {
+    /* position: absolute; */
+    /* top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0; */
+    height: 100px;
+    width: 100%;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: #008CBA;
+  }
+  
+  .container:hover .overlay {
+    opacity: 1;
+  }
+  
+  .text {
+    color: white;
+    font-size: 20px;
+    /* position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); */
+    text-align: center;
+  }
+
+img:hover{
+    opacity:90%;
+    background-color:white;
+
 }
 svg:not(:root){
     overflow:hidden;
@@ -177,7 +224,7 @@ main {
 }
 a {
     text-decoration: none;
-    color: black;
+    color: white;
     font-family:Cinzel;
 	/* color: var(--color-link); */
 	outline: none;
@@ -263,6 +310,37 @@ li:hover {
     /* width: 350px; */
     /* float: right; */
 }
+.slide{
+    width:100%;
+    height:670px;
+    background-image: url(../img/rain.gif);
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+    object-position: center;
+    border:solid 2px white;
+}
+.slide img{
+    width:600px;
+    height:670px;
+  
+  
+  
+   
+}
+header{
+    font-size: 1em;
+}
+.card{
+    float: left; 
+     margin-top:20%;
+     margin-left:50%;
+    height:177px;
+    width:325px;
+    background-color:white;
+    border:solid 2px black;
+   
+}
 .email1{
     font-size: 2.5em;
     color: black;
@@ -270,7 +348,7 @@ li:hover {
 }
 .RJ{
     font-size: 4em;
-    color: black;
+    color: white;
     margin-top: 90px;
 }
 @media screen and (max-width:850px) {
